tests/toylang/neg/001053_mutation.toylang
program a = { if a then sleep else then sleep; } .
